...
            android:layout_height="@dimen/list_item_image_view_size"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <CheckBox
            android:id="@+id/searchUserListItem_cbFavorite"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:checked="@{userItem.isFavorite}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
...
